# pytorch_gene_recognition

./: .gitignore  CHANGELOG.md  README.md  cli_args.py  extract_features.sh  fixes.md  inference.py  job.sh  main.py  pyproject.toml  requirements-rocm.txt  requirements.txt  rnn_test.py  split_training_features.py  split_training_features.sh  test_inference.py
models/: GeneRecognition.py  GeneRecognitionTransformer.py
